--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 </select> fő
                 <br>
                 <input type="text" name="fo1" id="fo1"> év
-                <input type="text" name="fo2" id="fo2"> év
-                <input type="text" name="fo3" id="fo3"> év
-                <input type="text" name="fo4" id="fo4"> év
+                <input type="text" name="fo2" id="fo2" disabled = "true"> év
+                <input type="text" name="fo3" id="fo3" disabled = "true"> év
+                <input type="text" name="fo4" id="fo4" disabled = "true"> év
             </p>
             <hr>
         </div>
@@ -90,7 +90,7 @@
                 <label for="kulter">Kültéri medencék - 800 Ft/nap/fő</label><br>
                 <input type="checkbox" name="furdoszauna" id="szauna" value="800">
                 <label for="szauna">Szauna belépő - 800 Ft/nap/fő</label><br>
-                <input type="checkbox" name="furdteljes" id="teljes" value="800">
+                <input type="checkbox" name="furdteljes" id="teljes" value="2000">
                 <label for="teljes">Teljes belépő - 2000 Ft/nap/fő</label>
                 
             </form>
